--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
@@ -1,5 +1,5 @@
 .landing
-    background-color: $lets_talk_green
+    background-color: $lets-talk-white
     text-align: center
     color: $lets-talk-grey
     padding-bottom: 30px
@@ -16,7 +16,7 @@
     padding-right: 5px
     width: 90%
     height: 370px
-    border: 2px solid $lets-talk-grey
+    // border: 2px solid $lets-talk-grey
     border-radius: 10px
 
 @media (min-width: 768px)
