--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/login.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/login.sass
@@ -7,8 +7,6 @@
     height: 460px
 
 .login__section
-    border: 2px solid $lets-talk-grey
-    border-radius: 10px
     padding: 20px
     
 .login__form
@@ -16,15 +14,21 @@
     flex-direction: column
 
 .login__input
-    margin-bottom: 10px
+    margin: 10px
+    margin-left: 0px
+    padding-left: 10px
     max-width: 300px
+    border: none
+    border-radius: 10px
+    height: 20px
 
 .login__button
-    border: 1px solid $lets-talk-white
-    border-radius: 5px
+    width: 60px
+    border: none
+    border-radius: 20px
     padding: 10px
-    color: $lets-talk-grey
-    background-color: $lets-talk-green
+    color: $lets-talk-white
+    background-color: $logo
 
 @media (min-width: 768px)
 
