--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/profile.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/profile.sass
@@ -8,27 +8,37 @@
     
 
 .profile__input
-    margin-bottom: 10px
+    margin: 10px
+    margin-left: 0px
+    padding-left: 10px
     max-width: 300px
+    border: none
+    border-radius: 10px
+    height: 20px
 
 .profile__textarea
     height: 150px
+    margin: 10px
+    border-radius: 10px
+    border: none
+    resize: none
+
 
 .profile__section
-    border: 2px solid $lets-talk-grey
+    // border: 2px solid $lets-talk-grey
     border-radius: 10px
-    padding: 20px
+    padding: 10px
 
 .profile__form
     display: flex
     flex-direction: column
 
 .profile__button
-    border: 1px solid $lets-talk-white
-    border-radius: 5px
+    border: none
+    border-radius: 20px
     padding: 10px
-    color: $lets-talk-grey
-    background-color: $lets-talk-green
+    color: $lets-talk-white
+    background-color: $logo
 
 .container-input
     display: flex
