--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -6,7 +6,7 @@
     margin-left: auto
     margin-right: auto
     width: 80%
-    border: 1px solid $lets-talk-grey
+    // border: 1px solid $lets-talk-grey
     border-radius: 5px
     overflow-y: scroll
     height: 250px
@@ -18,7 +18,7 @@
     margin-right: auto
     width: 80%
     max-width: 400px
-    border: 1px solid $lets-talk-grey
+    // border: 1px solid $lets-talk-grey
     border-radius: 5px
     color: $logo
     text-align: center
@@ -36,36 +36,38 @@
     width: 100%
     height: 100px
     border: none
-    border: 1px solid $lets-talk-grey
+    // border: 1px solid $lets-talk-grey
     border-radius: 5px
     margin-bottom: 5px
+    resize: none
 
 .button_send
     display: flex
     justify-content: space-around
 
 .message__button
-    border: 1px solid $lets-talk-grey
-    border-radius: 5px
-    padding: 10px
-    color: $lets-talk-grey
-    background-color: $lets-talk-green
     margin: 3px
+    border: none
+    border-radius: 20px
+    padding: 10px
+    color: $lets-talk-white
+    background-color: $logo
       
 .imgmini__container
     width: 60px
     height: 60px
     border-radius: 30px
-    border: 1px solid $lets-talk-grey
+    // border: 1px solid $lets-talk-grey
     background: none
     overflow: hidden
+    
 
 .imgmini
     width: 100%
     height: auto
 
 @supports(object-fit: cover)
-    .profile__image
+    .imgmini
         height: 100%
         object-fit: cover
         object-position: center center
