--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/photos.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/photos.sass
@@ -1,5 +1,5 @@
 .photos
-    background-color: white
+    background-color: $lets-talk-white
     padding-top: 20px
     display: flex
     text-align: center
@@ -7,6 +7,14 @@
 
 .img_footer
     text-align: center
+
+.photos__name
+    @extend .contact
+    color: $logo
+    text-align: center
+    border: none
+    padding-top: 5px
+    background-color: transparent
 
 .photos__img__container
     width: 280px
@@ -24,3 +32,4 @@
         height: 100%
         object-fit: cover
         object-position: center center
+
