--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
@@ -13,6 +13,7 @@
     background-color: $lets-talk-white
 
 .contact
+    cursor: pointer
     margin-left: auto
     margin-right: auto
     width: 80%
@@ -24,6 +25,7 @@
     text-align: center
 
 .contact__button
+    cursor: pointer
     margin: 3px
     border: none
     border-radius: 20px
