--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -46,6 +46,7 @@
     justify-content: space-around
 
 .message__button
+    cursor: pointer
     margin: 3px
     border: none
     border-radius: 20px
