--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/navbar.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/navbar.sass
@@ -56,6 +56,7 @@ h3
     font-size: 80%
 
 .dropbtn 
+    cursor: pointer
     background-color: $lets-talk-grey
     color: $lets-talk-white
     font-size: 18px
@@ -64,6 +65,7 @@ h3
     
 
 .drop__button
+    cursor: pointer
     width: 90px
     border: none
     padding: 10px
@@ -75,11 +77,13 @@ h3
     
     
 .dropdown 
+    cursor: pointer
     position: relative
     display: inline-block
 
 
 .dropdown-content 
+    cursor: pointer
     display: none
     position: absolute
     background-color: none
@@ -149,6 +153,7 @@ h3
         justify-content: space-around
 
     .menu__button
+        cursor: pointer
         width: 100px
         padding: 10px
         border: none
